--- a/json.ipynb
+++ b/json.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 251,
-   "outputs": [],
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                 1                  2  \\\n0     УВВ-08-4286-22 от 30.12.2022                      \n1                                   __Задачи договора   \n2                                                       \n3                                                       \n4                                                       \n...                            ...                ...   \n1056                                                    \n1057                                                    \n1058                                                    \n1059                                                    \n1060                                                    \n\n                                                      3  \\\n0                                                         \n1                                                         \n2     ____001 Заключение договора на работы по модер...   \n3                                                         \n4                                                         \n...                                                 ...   \n1056                                                      \n1057                                                      \n1058                                                      \n1059                                                      \n1060                                                      \n\n                                                      4  \\\n0                                                         \n1                                                         \n2                                                         \n3                 ______001.01 Вынесение закупки на ЦЗК   \n4                           ______001.02 Проведение ЦЗК   \n...                                                 ...   \n1056  ______2 Акт сдачи-приемки выполненных работ по...   \n1057                                                      \n1058                                                      \n1059                                                      \n1060                                                      \n\n                                    5  \\\n0                                       \n1                                       \n2                                       \n3                                       \n4                                       \n...                               ...   \n1056                                    \n1057  ________Задачи документооборота   \n1058                                    \n1059                                    \n1060                                    \n\n                                                      6  \\\n0                                                         \n1                                                         \n2                                                         \n3                                                         \n4                                                         \n...                                                 ...   \n1056                                                      \n1057                                                      \n1058            __________01 Подготовка Актов Заказчику   \n1059               __________02 Акты переданы Заказчику   \n1060  __________03 Акты подписаны Заказчиком, оригин...   \n\n                      Статус Длительность      Начало   Окончание  \\\n0                   В работе     455 дней  02.11.2022  31.01.2024   \n1                                                                   \n2                Выполняется      36 дней  15.02.2023  23.03.2023   \n3                 Просрочена        2 дня  15.02.2023  17.02.2023   \n4                 Просрочена        2 дня  20.02.2023  22.02.2023   \n...                      ...          ...         ...         ...   \n1056        Работы не начаты     380 дней  01.12.2022  16.12.2023   \n1057                                                                \n1058  Новая (не просмотрена)                                        \n1059  Новая (не просмотрена)                                        \n1060  Новая (не просмотрена)                                        \n\n         Ответственный Фев-2023 Мар-2023 Апр-2023 Май-2023  \n0        Роман Доронин                                      \n1                                                           \n2     Оксана Цымбалист                                      \n3     Оксана Цымбалист                                      \n4     Оксана Цымбалист                                      \n...                ...      ...      ...      ...      ...  \n1056  Оксана Цымбалист                                      \n1057                                                        \n1058  Оксана Цымбалист                                      \n1059  Оксана Цымбалист                                      \n1060  Оксана Цымбалист                                      \n\n[1061 rows x 15 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>Статус</th>\n      <th>Длительность</th>\n      <th>Начало</th>\n      <th>Окончание</th>\n      <th>Ответственный</th>\n      <th>Фев-2023</th>\n      <th>Мар-2023</th>\n      <th>Апр-2023</th>\n      <th>Май-2023</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>УВВ-08-4286-22 от 30.12.2022</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>В работе</td>\n      <td>455 дней</td>\n      <td>02.11.2022</td>\n      <td>31.01.2024</td>\n      <td>Роман Доронин</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td></td>\n      <td>__Задачи договора</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td></td>\n      <td></td>\n      <td>____001 Заключение договора на работы по модер...</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Выполняется</td>\n      <td>36 дней</td>\n      <td>15.02.2023</td>\n      <td>23.03.2023</td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>______001.01 Вынесение закупки на ЦЗК</td>\n      <td></td>\n      <td></td>\n      <td>Просрочена</td>\n      <td>2 дня</td>\n      <td>15.02.2023</td>\n      <td>17.02.2023</td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>______001.02 Проведение ЦЗК</td>\n      <td></td>\n      <td></td>\n      <td>Просрочена</td>\n      <td>2 дня</td>\n      <td>20.02.2023</td>\n      <td>22.02.2023</td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1056</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>______2 Акт сдачи-приемки выполненных работ по...</td>\n      <td></td>\n      <td></td>\n      <td>Работы не начаты</td>\n      <td>380 дней</td>\n      <td>01.12.2022</td>\n      <td>16.12.2023</td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1057</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>________Задачи документооборота</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1058</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>__________01 Подготовка Актов Заказчику</td>\n      <td>Новая (не просмотрена)</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1059</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>__________02 Акты переданы Заказчику</td>\n      <td>Новая (не просмотрена)</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1060</th>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>__________03 Акты подписаны Заказчиком, оригин...</td>\n      <td>Новая (не просмотрена)</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td>Оксана Цымбалист</td>\n      <td></td>\n      <td></td>\n      <td></td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n<p>1061 rows × 15 columns</p>\n</div>"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Библиотеки\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import warnings\n",
+    "import json\n",
+    "import os\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "class html_formatter():\n",
@@ -22,8 +34,6 @@
     "                     f'</td>'\n",
     "        td = ''\n",
     "        for n in range(n_items):\n",
-    "            if len(row) == n_items -1:\n",
-    "                row += [' ']\n",
     "            td += f'<td>{row[n]}</td>'\n",
     "        row_append += td + \\\n",
     "                      f'</tr>'\n",
@@ -38,7 +48,7 @@
     "html_formatter = html_formatter()\n",
     "\n",
     "#Считывание файла\n",
-    "pivot = pd.read_excel('./export.xlsx').replace(np.nan, ' ')\n",
+    "pivot = pd.read_excel('./resources/export.xlsx').replace(np.nan, ' ')\n",
     "\n",
     "#Добавление отступов\n",
     "expands = list(pivot.columns)[:6]\n",
@@ -70,6 +80,21 @@
     "all_cols = pivot.columns.to_list() + month #формирование массива столбцов параметров\n",
     "all_cols = ['Иерархия'] + [x for x in all_cols if str(x).isnumeric() == False]\n",
     "\n",
+    "#day = month = pd.date_range(begin, end,\n",
+    "                      #freq='MS').strftime(\"%Y-%b\").tolist()\n",
+    "for col in month: #заполнение столбцов с месяцами\n",
+    "    pivot[col] = ' '\n",
+    "pivot"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
     "#html-конвертация\n",
     "pos = list(pivot.columns).index(all_cols[1]) - 1 #число уровней\n",
     "n_items = pivot.shape[1] - pos - 1 #число заполняемых полей\n",
@@ -203,10 +228,10 @@
     "           level = k + 1\n",
     "           break\n",
     "   title = [x for x in row_ if x.isspace() == False]\n",
-    "   if (level != (pos+1)) & (len(title) == 1):\n",
-    "       row = [' ']*(pos-len(title))\n",
+    "   if len(title) == 1:\n",
+    "       row = [' ']*((n_items+1)-len(title))\n",
     "   else:\n",
-    "       row = title[1:] + [' ']*(pos-len(title))\n",
+    "       row = title[1:] + [' ']*((n_items+1)-len(title))\n",
     "       title = [title[0]]\n",
     "\n",
     "   if i + 1 != length: #проверка уровня следующей строки таблицы\n",
@@ -248,9 +273,18 @@
     "html_doc = header + body + footer #формирование полной таблицы\n",
     "\n",
     "#Формирование html-таблицы\n",
-    "with open('./table.html', 'w', newline='', encoding=\"utf-8\") as file:\n",
+    "with open('./resources/table.html', 'w', newline='', encoding=\"utf-8\") as file:\n",
     "    file.write(html_doc)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
