--- a/j.ipynb
+++ b/j.ipynb
@@ -2,19 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#Библиотеки\n",
+    "from datetime import datetime\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import calendar\n",
     "import warnings\n",
     "import json\n",
     "import os\n",
     "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "#Метод изъятия диапазона продолжительности\n",
+    "def date_rangize(start, finish):\n",
+    "    period_start = pd.Series(pd.to_datetime(start.replace(' ', ''),\n",
+    "                                            dayfirst=True)).min()\n",
+    "    period_s = period_start.replace(day=1)\n",
+    "    period_finish = pd.Series(pd.to_datetime(finish.replace(' ', ''),\n",
+    "                                             dayfirst=True)).max()\n",
+    "    period_f = period_finish.replace(day=2)\n",
+    "    if (pd.isnull(period_start) == False) & (pd.isnull(period_finish) == False):\n",
+    "        period = pd.date_range(period_s,\n",
+    "                               period_f,\n",
+    "                               freq='MS').strftime(\"%Y-%b\").tolist()\n",
+    "    else:\n",
+    "        period = 0\n",
+    "    res = [period_start, period_finish, period]\n",
+    "    return res\n",
     "\n",
     "#Метод индексации столбцов\n",
     "def col_indexize(tab, action, add):\n",
@@ -31,17 +50,29 @@
     "class html_formatter():\n",
     "    def tr_expand(self, grandparent, parent, expand,\n",
     "                        ids, style, collapse,\n",
-    "                        title, n_items , row):\n",
-    "        row_append = f'<tr class=\"treegrid-{grandparent}{parent}{expand}\" id=\"{ids}\" {style}>' + '\\n' \\\n",
+    "                        title, n_items , row, height):\n",
+    "        row_append = f'<tr class=\"treegrid-{grandparent}{parent}{expand}\" ' \\\n",
+    "                     f'id=\"{ids}\" {style}>' + '\\n' \\\n",
     "                     f'<td>' + '\\n' \\\n",
     "                     f'<span {collapse} </span>' + '\\n' \\\n",
     "                     f'{title}' + '\\n' \\\n",
     "                     f'</td>'\n",
     "        td = ''\n",
+    "        k=-1\n",
+    "        float_sum = sum(isinstance(x, float) for x in row)\n",
     "        for n in range(n_items):\n",
-    "            td += f'<td style=\"padding: 0;\">{row[n]}' + '\\n'\n",
-    "            if row[n] == ' ':\n",
-    "              td += f'<td class=\"bg\" style=\"width: 5px; height: 55px; border: 0; padding: 0;\" ;=\"\"> </td>' + '\\n'\n",
+    "            if html_formatter.same_check(row):\n",
+    "                td += f'<td style=\"padding: 0; border:0;\">' + '\\n'\n",
+    "            elif isinstance(row[n], float):\n",
+    "                k+=1\n",
+    "                rotate = ''\n",
+    "                if (k==0) | (float_sum == 1):\n",
+    "                    rotate = '_rotate'\n",
+    "                td += f'<td style=\"padding: 0; border:0;\">' + '\\n'\n",
+    "                td += f'<div class=\"progress{rotate}\" style=\"width: {row[n]}px; ' \\\n",
+    "                      f'height: {height}px; padding: 0; border:0;\"></div>'+'\\n'\n",
+    "            else:\n",
+    "                td += f'<td style=\"padding: 0;\">{row[n]}' + '\\n'\n",
     "            td += f'</td>'\n",
     "        row_append += td + f'</tr>'\n",
     "        return row_append\n",
@@ -52,6 +83,9 @@
     "            tr += '<th>' + tag + '</th>'\n",
     "         tr += '</tr>'\n",
     "         return tr\n",
+    "\n",
+    "    def same_check(self, list):\n",
+    "        return all(x == list[0] for x in list)\n",
     "html_formatter = html_formatter()\n",
     "\n",
     "#Входные переменные\n",
@@ -62,8 +96,8 @@
     "          'DURATION': 'Длительность',\n",
     "          'BEGIN_DATE_FORMAT': 'Начало',\n",
     "          'CLOSE_DATE_FORMAT': 'Окончание',\n",
-    "          'RESPONSOBLE_FIO': 'Ответственный'\n",
-    "         }\n",
+    "          'RESPONSOBLE_FIO': 'Ответственный'}\n",
+    "\n",
     "#Открытие json\n",
     "with open('./resources/data.json') as fp:\n",
     "    data = json.load(fp)\n",
@@ -136,48 +170,93 @@
     "    pivot[col] = np.where(pivot[col] == ' ',\n",
     "                                        ' ',\n",
     "                                        '__'*k + pivot[col].astype(str))\n",
+    "cols_prefinal = list(pivot.columns)\n",
     "\n",
     "#Добавление временных столбцов\n",
-    "begin = pd.to_datetime(pivot['Начало'].replace(' ', '')).min()\n",
-    "end = pd.to_datetime(pivot['Окончание'].replace(' ', '')).max()\n",
-    "month = pd.date_range(begin, end,\n",
-    "                      freq='MS').strftime(\"%Y-%b\").tolist()\n",
+    "pivot_temp = pivot.copy()[pivot['0']!=' ']\n",
+    "start = pivot_temp['Начало']\n",
+    "finish = pivot_temp['Окончание']\n",
+    "month = date_rangize(start, finish)[2]\n",
+    "\n",
+    "all_cols = pivot.columns.to_list() + month #формирование массива столбцов параметров\n",
+    "all_cols = ['Иерархия'] + [x for x in all_cols if str(x).isnumeric() == False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "outputs": [],
+   "source": [
+    "#Заполнение временных столбцов\n",
+    "width = 50 #ширина шкалы прогресса\n",
+    "height = 64 #ширина шкалы прогресса\n",
+    "n_rows = pivot.shape[0]\n",
+    "col_begin = pivot.columns.get_loc('Начало')\n",
+    "col_end = pivot.columns.get_loc('Окончание')\n",
+    "for col in month:\n",
+    "    pivot[col] = float(0.00)\n",
+    "for col in month: #заполнение столбцов с месяцами величиной ширины\n",
+    "    col_month = pivot.columns.get_loc(col)\n",
+    "    for row in range(n_rows):\n",
+    "        start = pivot.iloc[row, col_begin]\n",
+    "        finish = pivot.iloc[row, col_end]\n",
+    "        range_attr = date_rangize(start, finish)\n",
+    "        period_start = range_attr[0]\n",
+    "        period_finish = range_attr[1]\n",
+    "        period = range_attr[2]\n",
+    "        if period != 0:\n",
+    "            period_nons = list(set(month) - set(period))\n",
+    "            if col not in period_nons:\n",
+    "                month_number = datetime.strptime(col[-3:], '%b').month\n",
+    "                year_number = int(col[:4])\n",
+    "                if (period_start.month == period_finish.month) & (period_start.year == period_finish.year):\n",
+    "                    width_val = round((period_finish.day-period_start.day)*width/month_range, 2)\n",
+    "                    pivot.iloc[row, col_month] = width_val\n",
+    "                elif (month_number == period_start.month) & (year_number == period_start.year): #проверка границы начала\n",
+    "                    month_range = calendar.monthrange(year_number, month_number)[1]\n",
+    "                    width_val = round((month_range-period_start.day)*width/month_range, 2)\n",
+    "                    pivot.iloc[row, col_month] = width_val\n",
+    "                elif (month_number == period_finish.month) & (year_number == period_finish.year): #проверка границы конца\n",
+    "                    month_range = calendar.monthrange(year_number, month_number)[1]\n",
+    "                    width_val = round(period_finish.day*width/month_range, 2)\n",
+    "                    pivot.iloc[row, col_month] = width_val\n",
+    "                else:\n",
+    "                    pivot.iloc[row, col_month] = width\n",
     "\n",
     "month_dict = {'Jan': 'Янв', 'Feb': 'Фев', 'Mar': 'Мар', #приведение даты к необходимому формату\n",
     "              'Apr': 'Апр', 'May': 'Май', 'Jun': 'Июн',\n",
     "              'Jul': 'Июл', 'Aug': 'Авг', 'Sep': 'Сен',\n",
     "              'Oct': 'Окт', 'Nov': 'Ноя', 'Dec': 'Дек'}\n",
-    "for key, value in month_dict.items():\n",
+    "for key, value in month_dict.items(): #перевод дат на русский\n",
     "    month = [x.replace(key,value) for x in month]\n",
     "month = [x[-3:] + '-' + x[:4] for x in month]\n",
-    "\n",
-    "all_cols = pivot.columns.to_list() + month #формирование массива столбцов параметров\n",
-    "all_cols = ['Иерархия'] + [x for x in all_cols if str(x).isnumeric() == False]\n",
-    "\n",
-    "for col in month: #заполнение столбцов с месяцами\n",
-    "    pivot[col] = ' '"
-   ]
+    "cols_final = cols_prefinal + month\n",
+    "pivot.columns = cols_final"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 220,
    "outputs": [],
    "source": [
     "#html-конвертация\n",
     "pos = list(pivot.columns).index(all_cols[1]) - 1 #число уровней\n",
     "n_items = len(all_cols)-1#число заполняемых полей\n",
-    "width = 10\n",
     "header = '<!doctype html>' + '\\n' \\\n",
     "         '<html>' + '\\n' \\\n",
     "         '<head>' + '\\n' \\\n",
     "         '<meta charset=\"utf-8\">' + '\\n' \\\n",
     "         '<title>Расписание</title>' + '\\n' \\\n",
     "         '<style>' + '\\n' \\\n",
-    "              '.bg {background-color: green;}' + '\\n' \\\n",
+    "              '.progress {background-color: green;}' + '\\n' \\\n",
+    "              '.progress_rotate {background-color: green; transform: rotate(180deg);}' + '\\n' \\\n",
     "              'td {overflow: hidden; text-overflow: ellipsis; word-wrap: break-word;}'+ '\\n' \\\n",
-    "              '.treegrid-indent {width:' + f'{width}px;height: 10px;display: inline-block;' + '\\n' \\\n",
+    "              '.treegrid-indent {width:' + f'{width}px;height: {height}px;display: inline-block;' + '\\n' \\\n",
     "                                 'position: relative;}' + '\\n' \\\n",
-    "              '.treegrid-expander {width:' + f'{width}px;height: 10px;display: inline-block;' + '\\n' \\\n",
+    "              '.treegrid-expander {width:10px; height: 10px;display: inline-block;' + '\\n' \\\n",
     "                                   'position: relative;}' + '\\n' \\\n",
     "              '.treegrid-expanded ' + '\\n' \\\n",
     "                '.treegrid-expander {background-color: green;cursor: pointer;}' + '\\n' \\\n",
@@ -294,20 +373,19 @@
     "\n",
     "   row_ = list(pivot.iloc[i, :]) #формирование строки таблицы\n",
     "   for k, ind in enumerate(row_):\n",
-    "       if ind != ' ':\n",
+    "       if (ind != ' ') & (isinstance(ind, float)==False):\n",
     "           level = k + 1\n",
     "           break\n",
-    "   title = [x for x in row_ if x.isspace() == False]\n",
+    "   title = [x for x in row_ if (x != ' ') & (isinstance(ind, float)==False)]\n",
     "   if len(title) == 1:\n",
-    "       row = [' ']*((n_items+1)-len(title))\n",
+    "       row = [' ']*((n_levels+1)-len(title)) + row_[-len(month):]\n",
     "   else:\n",
-    "       row = title[1:] + [' ']*((n_items+1)-len(title))\n",
+    "       row = title[1:] + [' ']*((n_levels+1)-len(title)) + row_[-len(month):]\n",
     "       title = [title[0]]\n",
-    "\n",
     "   if i + 1 != length: #проверка уровня следующей строки таблицы\n",
     "        row_next_ = list(pivot.iloc[i+1, :])\n",
     "        for k_next, ind_next in enumerate(row_next_):\n",
-    "           if ind_next != ' ':\n",
+    "           if (ind_next != ' ') & (isinstance(ind_next, float)==False):\n",
     "               level_next = k_next + 1\n",
     "               break\n",
     "   else:\n",
@@ -338,7 +416,7 @@
     "\n",
     "   body += html_formatter.tr_expand(grandparent, parent, expand, #добавление строк в таблицу\n",
     "                                    ids, style, collapse,\n",
-    "                                    title[0], n_items, row)\n",
+    "                                    title[0], n_items, row, height)\n",
     "\n",
     "html_doc = header + body + footer #формирование полной таблицы\n",
     "\n",
@@ -346,6 +424,15 @@
     "with open('./resources/table.html', 'w', newline='', encoding=\"utf-8\") as file:\n",
     "    file.write(html_doc)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
