--- a/j.ipynb
+++ b/j.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -50,28 +50,50 @@
     "class html_formatter():\n",
     "    def tr_expand(self, grandparent, parent, expand,\n",
     "                        ids, style, collapse,\n",
-    "                        title, n_items , row, height):\n",
+    "                        title, n_items, row):\n",
     "        row_append = f'<tr class=\"treegrid-{grandparent}{parent}{expand}\" ' \\\n",
     "                     f'id=\"{ids}\" {style}>' + '\\n' \\\n",
     "                     f'<td>' + '\\n' \\\n",
     "                     f'<span {collapse} </span>' + '\\n' \\\n",
     "                     f'{title}' + '\\n' \\\n",
     "                     f'</td>'\n",
+    "        color = ''\n",
+    "        for key in color_dict.keys():\n",
+    "            if key in row:\n",
+    "                color = color_dict[key]\n",
+    "                break\n",
+    "\n",
     "        td = ''\n",
-    "        k=-1\n",
-    "        float_sum = sum(isinstance(x, float) for x in row)\n",
+    "        n_num = 0\n",
     "        for n in range(n_items):\n",
-    "            if html_formatter.same_check(row):\n",
-    "                td += f'<td style=\"padding: 0; border:0;\">' + '\\n'\n",
-    "            elif isinstance(row[n], float):\n",
-    "                k+=1\n",
-    "                rotate = ''\n",
-    "                if (k==0) | (float_sum == 1):\n",
-    "                    rotate = '_rotate'\n",
-    "                td += f'<td style=\"padding: 0; border:0;\">' + '\\n'\n",
-    "                td += f'<div class=\"progress{rotate}\" style=\"width: {row[n]}px; ' \\\n",
-    "                      f'height: {height}px; padding: 0; border:0;\"></div>'+'\\n'\n",
-    "            else:\n",
+    "            if (isinstance(row[n], float)) & (row[n]!=float(0)):\n",
+    "                n_num += 1\n",
+    "            if html_formatter.same_check(row): #пустые строки\n",
+    "                td += f'<td style=\"padding: 0; border: 0px solid;\">' + '\\n'\n",
+    "            elif row[n] == 100:\n",
+    "                css_class = 'class = \"full\"'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid; background-color: {color};\">' + '\\n'\n",
+    "            elif row[n] == float(0):\n",
+    "                css_class = 'class = \"null\"'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid; background-color: {back};\">' + '\\n'\n",
+    "            elif '|' in str(row[n]):\n",
+    "                begin = row[n].split('|')[0]\n",
+    "                end = row[n].split('|')[1]\n",
+    "                css_class = 'class = \"inter\"'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid;'\\\n",
+    "                      f' background: linear-gradient(to right, {back} 0%, {back} {begin}%, ' \\\n",
+    "                      f'{color} {begin}%, {color} {end}%, {back} {end}%, {back} 100%);\">' + '\\n'\n",
+    "            elif (isinstance(row[n], float)) & (n_num==1):\n",
+    "                css_class = 'class = \"start\"'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid;'\\\n",
+    "                      f' background: linear-gradient(to right, {back} 0%, {back} {100-row[n]}%, ' \\\n",
+    "                      f'{color} {100-row[n]}%, {color} 100%);\">' + '\\n'\n",
+    "            elif (isinstance(row[n], float)) & (n_num!=1):\n",
+    "                css_class = 'class = \"finish\"'\n",
+    "                td += f'<td {css_class} style=\"padding: 0; border: 0px solid;'\\\n",
+    "                      f' background: linear-gradient(to right, {color} 0%, {color} {row[n]}%, ' \\\n",
+    "                      f'{back} {row[n]}%, {back} 100%);\">' + '\\n'\n",
+    "            else: #обычная ячейка таблицы\n",
     "                td += f'<td style=\"padding: 0;\">{row[n]}' + '\\n'\n",
     "            td += f'</td>'\n",
     "        row_append += td + f'</tr>'\n",
@@ -179,17 +201,12 @@
     "month = date_rangize(start, finish)[2]\n",
     "\n",
     "all_cols = pivot.columns.to_list() + month #формирование массива столбцов параметров\n",
-    "all_cols = ['Иерархия'] + [x for x in all_cols if str(x).isnumeric() == False]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "outputs": [],
-   "source": [
+    "all_cols = ['Иерархия'] + [x for x in all_cols if str(x).isnumeric() == False]\n",
+    "\n",
     "#Заполнение временных столбцов\n",
     "width = 50 #ширина шкалы прогресса\n",
-    "height = 64 #ширина шкалы прогресса\n",
+    "height = 25 #длина шкалы прогресса\n",
+    "back = 'azure' #фон диаграммы\n",
     "n_rows = pivot.shape[0]\n",
     "col_begin = pivot.columns.get_loc('Начало')\n",
     "col_end = pivot.columns.get_loc('Окончание')\n",
@@ -210,19 +227,19 @@
     "                month_number = datetime.strptime(col[-3:], '%b').month\n",
     "                year_number = int(col[:4])\n",
     "                if (period_start.month == period_finish.month) & (period_start.year == period_finish.year):\n",
-    "                    width_val = round((period_finish.day-period_start.day)*width/month_range, 2)\n",
-    "                    pivot.iloc[row, col_month] = width_val\n",
+    "                    width_val_start = round(period_start.day/month_range*100)\n",
+    "                    width_val_finish = round(period_finish.day/month_range*100)\n",
+    "                    pivot.iloc[row, col_month] = f'{width_val_start}|{width_val_finish}'\n",
     "                elif (month_number == period_start.month) & (year_number == period_start.year): #проверка границы начала\n",
     "                    month_range = calendar.monthrange(year_number, month_number)[1]\n",
-    "                    width_val = round((month_range-period_start.day)*width/month_range, 2)\n",
+    "                    width_val = round((month_range-period_start.day)/month_range*100, 2)\n",
     "                    pivot.iloc[row, col_month] = width_val\n",
     "                elif (month_number == period_finish.month) & (year_number == period_finish.year): #проверка границы конца\n",
     "                    month_range = calendar.monthrange(year_number, month_number)[1]\n",
-    "                    width_val = round(period_finish.day*width/month_range, 2)\n",
+    "                    width_val = round(period_finish.day/month_range*100, 2)\n",
     "                    pivot.iloc[row, col_month] = width_val\n",
     "                else:\n",
-    "                    pivot.iloc[row, col_month] = width\n",
-    "\n",
+    "                    pivot.iloc[row, col_month] = 100\n",
     "month_dict = {'Jan': 'Янв', 'Feb': 'Фев', 'Mar': 'Мар', #приведение даты к необходимому формату\n",
     "              'Apr': 'Апр', 'May': 'Май', 'Jun': 'Июн',\n",
     "              'Jul': 'Июл', 'Aug': 'Авг', 'Sep': 'Сен',\n",
@@ -230,42 +247,45 @@
     "for key, value in month_dict.items(): #перевод дат на русский\n",
     "    month = [x.replace(key,value) for x in month]\n",
     "month = [x[-3:] + '-' + x[:4] for x in month]\n",
-    "cols_final = cols_prefinal + month\n",
-    "pivot.columns = cols_final"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "outputs": [],
-   "source": [
+    "all_cols = all_cols[:-len(month)] + month\n",
+    "\n",
+    "color_dict = {                         #задание цвета\n",
+    "               'Не начат': 'darkgrey',\n",
+    "               'Работы не начаты': 'darkgrey',\n",
+    "               'В работе': 'darkblue',\n",
+    "               'Выполняется': 'darkblue',\n",
+    "               'Новая (не просмотрена) ': 'purple',\n",
+    "               'Новая (не просмотрена)': 'purple',\n",
+    "               'Просрочена ': 'darkred',\n",
+    "               'Просрочена': 'darkred',\n",
+    "               'Почти просрочена ': 'red',\n",
+    "               'Почти просрочена': 'red',\n",
+    "               'Завершена ': 'green',\n",
+    "               'Завершена': 'green',\n",
+    "              }\n",
     "#html-конвертация\n",
     "pos = list(pivot.columns).index(all_cols[1]) - 1 #число уровней\n",
-    "n_items = len(all_cols)-1#число заполняемых полей\n",
+    "n_items = len(all_cols)-1 #число заполняемых полей\n",
     "header = '<!doctype html>' + '\\n' \\\n",
     "         '<html>' + '\\n' \\\n",
     "         '<head>' + '\\n' \\\n",
     "         '<meta charset=\"utf-8\">' + '\\n' \\\n",
     "         '<title>Расписание</title>' + '\\n' \\\n",
     "         '<style>' + '\\n' \\\n",
-    "              '.progress {background-color: green;}' + '\\n' \\\n",
-    "              '.progress_rotate {background-color: green; transform: rotate(180deg);}' + '\\n' \\\n",
-    "              'td {overflow: hidden; text-overflow: ellipsis; word-wrap: break-word;}'+ '\\n' \\\n",
+    "         'table {'\\\n",
+    "         'border: 0px solid;}'\\\n",
     "              '.treegrid-indent {width:' + f'{width}px;height: {height}px;display: inline-block;' + '\\n' \\\n",
     "                                 'position: relative;}' + '\\n' \\\n",
     "              '.treegrid-expander {width:10px; height: 10px;display: inline-block;' + '\\n' \\\n",
     "                                   'position: relative;}' + '\\n' \\\n",
     "              '.treegrid-expanded ' + '\\n' \\\n",
-    "                '.treegrid-expander {background-color: green;cursor: pointer;}' + '\\n' \\\n",
+    "              '.treegrid-expander {background-color: green;cursor: pointer;}' + '\\n' \\\n",
     "              '.treegrid-collapsed ' + '\\n' \\\n",
-    "                '.treegrid-expander {background-color: red;cursor: pointer;}' + '\\n' \\\n",
+    "              '.treegrid-expander {background-color: red;cursor: pointer;}' + '\\n' \\\n",
     "         '</style>' + '\\n' \\\n",
     "         '</head>' + '\\n' \\\n",
-    "         '<body style=\"background-color: azure;\">' + '\\n' \\\n",
-    "         '<font size=\"2\" face=\"Arial\">' + '\\n' \\\n",
+    "         f'<body style=\"background-color: {back};\">' + '\\n' \\\n",
+    "         '<font size=\"2.5\" face=\"Arial\">' + '\\n' \\\n",
     "         '<table>' + '\\n' \\\n",
     "         '<tbody>' + '\\n' \\\n",
     "         '<tr>' + '\\n' \\\n",
@@ -416,17 +436,14 @@
     "\n",
     "   body += html_formatter.tr_expand(grandparent, parent, expand, #добавление строк в таблицу\n",
     "                                    ids, style, collapse,\n",
-    "                                    title[0], n_items, row, height)\n",
+    "                                    title[0], n_items, row)\n",
     "\n",
     "html_doc = header + body + footer #формирование полной таблицы\n",
     "\n",
     "#Формирование html-таблицы\n",
     "with open('./resources/table.html', 'w', newline='', encoding=\"utf-8\") as file:\n",
     "    file.write(html_doc)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
